<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="scores">SCORES</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="library">LIBRARY</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="capstone">capstone</string>
    <string name="toast_this_button_will_lunch">"This button will launch my %s app!"</string>
</resources>
