<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@style/Base.Theme.AppCompat.Light">

    <TextView
        android:text="@string/my_nanodegree_apps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_main"
        android:typeface="sans"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#D6000000"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:gravity="center_horizontal"/>

    <Button
        style="@style/UdacityButton"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/title_main"/>

    <Button
        style="@style/UdacityButton"
        android:text="@string/scores_app"
        android:id="@+id/scores_app"
        android:layout_below="@+id/spotify_streamer"/>

    <Button
        style="@style/UdacityButton"
        android:text="@string/library_app"
        android:id="@+id/library_app"
        android:layout_below="@+id/scores_app"/>

    <Button
        style="@style/UdacityButton"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/library_app"/>

    <Button
        style="@style/UdacityButton"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader"
        android:layout_below="@+id/build_it_bigger"
        android:onClick="showToast"/>

    <Button
        style="@style/UdacityButton.Red"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/capstone_my_own_app"
        android:layout_below="@+id/xyz_reader"/>

</RelativeLayout>
